// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar check props 1`] = `
<scale-progress-bar label="testLabel" percentage="18" percentage-start="5" show-status="" status-description="statusDescription" status-inside="" stroke-width="24" styles="color:blue;" text-inside="">
  <template shadowrootmode="open">
    <style>
      color:blue;
    </style>
    <style>
      @keyframes showProgress {
      from {
        width: 5%;
      }
      to {
        width: 18%;
      }
    }
    </style>
    <div class="progress-bar" part="progress-bar">
      <div class="progress-bar__top-container">
        <label class="progress-bar__label" htmlfor="progress-bar-1" part="label">
          testLabel
        </label>
        <div aria-hidden="true" class="progress-bar__status" part="status">
          18%
        </div>
      </div>
      <div class="progress-bar__wrapper" part="wrapper">
        <div aria-label="testLabel" aria-valuemax="100" aria-valuemin="0" aria-valuenow="18" aria-valuetext="18%" class="progress-bar__outer" id="progress-bar-1" part="outer" role="progressbar">
          <div class="progress-bar__inner" part="inner" style="--progress: 18%;"></div>
        </div>
        <slot name="icon"></slot>
      </div>
    </div>
    <div class="progress-bar__status-description" part="status-description" role="alert">
      statusDescription
    </div>
    <span aria-live="polite" class="progress-bar__aria-live">
      20%
    </span>
  </template>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should match snapshot 1`] = `
<scale-progress-bar>
  <template shadowrootmode="open">
    <style>
      @keyframes showProgress {
      from {
        width: 0%;
      }
      to {
        width: 0%;
      }
    }
    </style>
    <div class="progress-bar" part="progress-bar">
      <div class="progress-bar__top-container">
        <span></span>
        <div aria-hidden="true" class="progress-bar__status" part="status">
          0%
        </div>
      </div>
      <div class="progress-bar__wrapper" part="wrapper">
        <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="progress-bar__outer" id="progress-bar-0" part="outer" role="progressbar"></div>
        <slot name="icon"></slot>
      </div>
    </div>
    <span aria-live="polite" class="progress-bar__aria-live"></span>
  </template>
  Label
</scale-progress-bar>
`;
